# trailscript-testgen

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
event_schema/: __init__.py  checkpoint.py  event.py
examples/: generate_from_events.py
testgen/ai/: claude_client.py  refiner.py  ts_guard.py
testgen/flow_library/: comparator.py
testgen/generators/: base.py  ts_escape.py  variables.py
testgen/generators/playwright/: adapter.py  dedup.py  event_typing.py
testgen/generators/playwright/templates/: README.md.j2  playwright.config.ts.j2  test.grouped.spec.ts.j2  test.spec.ts.j2  variables.ts.j2
testgen/graph/: flow_builder.py  path_extractor.py
testgen/normalisation/: element_normaliser.py  exclusion_splitter.py  session_splitter.py  url_normaliser.py
tests/snapshots/: test_playwright_output.py
tests/unit/: test_build_variable_map.py  test_claude_client.py  test_click_assertions.py  test_dedup.py  test_element_normaliser.py  test_event_typing.py  test_exclusion_splitter.py  test_flow_builder.py  test_flow_comparator.py  test_path_extractor.py  test_refiner.py  test_session_splitter.py  test_ts_escape.py  test_ts_guard.py  test_url_normaliser.py
